# docs/swagger.json
@@ -23,7 +23,7 @@
     "paths": {
         "/{user_id}/add": {
             "post": {
-                "description": "Adds an even with given parameters associated with user. NotificationPeriod must look like {number}s,{number}m or {number}h. Implemented with the use of transaction: first the availibility is checked. In case one's new booking request intersects with and old one(even if belongs to him), the request is considered erratic.",
+                "description": "Adds an even with given parameters associated with user. NotificationPeriod is optional and must look like {number}s,{number}m or {number}h. Implemented with the use of transaction: first the availibility is checked. In case one's new booking request intersects with and old one(even if belongs to him), the request is considered erratic. startDate is to be before endDate and both should not be expired.",
                 "consumes": [
                     "application/json"
                 ],
@@ -91,7 +91,7 @@
         },
         "/{user_id}/get-events": {
             "get": {
-                "description": "Responds with series of event info objects within given time period. The parameters are start date and end date.",
+                "description": "Responds with series of event info objects within given time period. The query parameters are start date and end date (start date is to be before end date and both should not be expired).",
                 "produces": [
                     "application/json"
                 ],
@@ -113,7 +113,7 @@
                     {
                         "type": "string",
                         "format": "time.Time",
-                        "default": "2006-01-02T15:04:05-07:00",
+                        "default": "2024-03-28T17:43:00-03:00",
                         "description": "start",
                         "name": "start",
                         "in": "query",
@@ -122,7 +122,7 @@
                     {
                         "type": "string",
                         "format": "time.Time",
-                        "default": "2006-01-02T15:04:05-07:00",
+                        "default": "2024-03-29T17:43:00-03:00",
                         "description": "end",
                         "name": "end",
                         "in": "query",
@@ -165,7 +165,7 @@
         },
         "/{user_id}/get-vacant-rooms": {
             "get": {
-                "description": "Receives two dates. Responds with list of vacant rooms.",
+                "description": "Receives two dates as query parameters. start is to be before end and both should not be expired. Responds with list of vacant rooms and their parameters for given interval.",
                 "produces": [
                     "application/json"
                 ],
@@ -187,7 +187,7 @@
                     {
                         "type": "string",
                         "format": "time.Time",
-                        "default": "2006-01-02T15:04:05-07:00",
+                        "default": "2024-03-28T17:43:00-03:00",
                         "description": "start",
                         "name": "start",
                         "in": "query",
@@ -196,7 +196,7 @@
                     {
                         "type": "string",
                         "format": "time.Time",
-                        "default": "2006-01-02T15:04:05-07:00",
+                        "default": "2024-03-29T17:43:00-03:00",
                         "description": "end",
                         "name": "end",
                         "in": "query",
@@ -369,7 +369,7 @@
         },
         "/{user_id}/{event_id}/update": {
             "patch": {
-                "description": "Updates an existing Event with given EventID and several optional fields. At least one field should not be empty. NotificationPeriod must look like {number}s,{number}m or {number}h. Implemented with the use of transaction: first availibility is checked - in case one attempts to alter his previous booking (i.e. widen or tighten its' limits) the booking is updated. If it overlaps with smb else's booking the request is considered unsuccessful.",
+                "description": "Updates an existing Event with given EventID, suiteID, startDate, endDate values (notificationPeriod being optional). Implemented with the use of transaction: first the availibility is checked. In case one attempts to alter his previous booking (i.e. widen or tighten its' limits) the booking is updated.  If it overlaps with smb else's booking the request is considered unsuccessful. startDate parameter  is to be before endDate and both should not be expired.",
                 "consumes": [
                     "application/json"
                 ],
@@ -446,7 +446,7 @@
         },
         "/{user_id}/{suite_id}/get-vacant-dates": {
             "get": {
-                "description": "Responds with free dates within month for selected suite.",
+                "description": "Responds with list of vacant intervals within month for selected suite.",
                 "produces": [
                     "application/json"
                 ],
@@ -522,17 +522,17 @@
                 "endDate": {
                     "description": "Дата и время окончания бронировании",
                     "type": "string",
-                    "example": "2024-01-29T17:43:00-03:00"
+                    "example": "2024-03-29T17:43:00-03:00"
                 },
                 "notificationPeriod": {
                     "description": "Интервал времени для предварительного уведомления о бронировании",
                     "type": "string",
-                    "example": "1h"
+                    "example": "24h"
                 },
                 "startDate": {
                     "description": "Дата и время начала бронировании",
                     "type": "string",
-                    "example": "2024-01-28T17:43:00-03:00"
+                    "example": "2024-03-28T17:43:00-03:00"
                 },
                 "suiteID": {
                     "description": "номер апаратаментов",
@@ -577,7 +577,6 @@
             "type": "object",
             "properties": {
                 "events": {
-                    "description": "TODO: implement convert Event structs",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/event-schedule_internal_model.EventInfo"
@@ -635,11 +634,16 @@
         },
         "event-schedule_internal_api.UpdateEventRequest": {
             "type": "object",
+            "required": [
+                "endDate",
+                "startDate",
+                "suiteID"
+            ],
             "properties": {
                 "endDate": {
                     "description": "Дата и время окончания бронирования",
                     "type": "string",
-                    "example": "2006-01-02T15:04:05-07:00"
+                    "example": "2024-03-29T17:43:00-03:00"
                 },
                 "notificationPeriod": {
                     "description": "Интервал времени для уведомления о бронировании",
@@ -649,7 +653,7 @@
                 "startDate": {
                     "description": "Дата и время начала бронировании",
                     "type": "string",
-                    "example": "2006-01-02T15:04:05-07:00"
+                    "example": "2024-03-28T17:43:00-03:00"
                 },
                 "suiteID": {
                     "description": "Номер апартаментов",
@@ -684,7 +688,7 @@
                     "description": "Дата и время окончания бронировании",
                     "type": "string"
                 },
-                "notificationPeriod": {
+                "notifyAt": {
                     "description": "Интервал времени для уведомления о бронировании",
                     "type": "string"
                 },
@@ -698,11 +702,7 @@
                 },
                 "updatedAt": {
                     "description": "Дата и время обновления",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/sql.NullTime"
-                        }
-                    ]
+                    "type": "string"
                 }
             }
         },
@@ -714,7 +714,7 @@
                 },
                 "startDate": {
                     "type": "string",
-                    "example": "2006-01-02T15:04:05-07:00"
+                    "example": "2024-03-02T15:04:05-07:00"
                 }
             }
         },
@@ -732,18 +732,6 @@
                 "suiteID": {
                     "type": "integer",
                     "example": 123
-                }
-            }
-        },
-        "sql.NullTime": {
-            "type": "object",
-            "properties": {
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
                 }
             }
         }
